# krata

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEV.md  FAQ.md  LICENSE  LICENSING.md  README.md  SECURITY.md  index.html  lefthook.toml  release-plz.toml  style.css  technical-overview.md
container/: Cargo.toml
container/src/: background.rs  childwait.rs  init.rs  lib.rs
controller/: Cargo.toml
controller/src/: autoloop.rs  client.rs  console.rs  lib.rs
controller/src/ctl/: cfgblk.rs  console.rs  destroy.rs  launch.rs  mod.rs
controller/src/image/: fetch.rs  mod.rs
controller/src/launch/: mod.rs
crates/ctl/: Cargo.toml
crates/ctl/src/: console.rs  format.rs  lib.rs  metrics.rs  pull.rs
crates/ctl/src/cli/: attach.rs  cpu_topology.rs  destroy.rs  exec.rs  identify_host.rs  idm_snoop.rs  launch.rs  list.rs  list_devices.rs  logs.rs  metrics.rs  mod.rs  pull.rs  resolve.rs  top.rs  watch.rs
crates/daemon/: Cargo.toml  build.rs
crates/daemon/proto/kratad/: db.proto
crates/daemon/src/: command.rs  config.rs  console.rs  control.rs  db.rs  devices.rs  event.rs  glt.rs  idm.rs  lib.rs  metrics.rs  oci.rs  zlt.rs
crates/daemon/src/control/: attach_zone_console.rs  create_zone.rs  destroy_zone.rs  exec_inside_zone.rs  get_host_cpu_topology.rs  get_host_status.rs  get_zone.rs  host_status.rs  list_devices.rs  list_network_reservations.rs  list_zones.rs  mod.rs  pull_image.rs  read_hypervisor_console.rs  read_zone_metrics.rs  resolve_zone_id.rs  set_host_power_management_policy.rs  snoop_idm.rs  update_zone_resources.rs  watch_events.rs
crates/daemon/src/db/: ip.rs  mod.rs  network.rs  zone.rs
crates/daemon/src/ip/: assignment.rs  mod.rs
crates/daemon/src/network/: assignment.rs
crates/daemon/src/reconcile/: guest.rs  mod.rs
crates/guest/: Cargo.toml
crates/guest/src/: background.rs  childwait.rs  exec.rs  init.rs  lib.rs  metrics.rs
crates/guest/src/spawn/: child.rs  mod.rs  stdio.rs
crates/krata/: Cargo.toml  build.rs
crates/krata/proto/krata/: common.proto  control.proto
crates/krata/src/: client.rs  common.rs  dial.rs  ethtool.rs  events.rs  idm.rs  launchcfg.rs  lib.rs  unix.rs
crates/krata/src/bus/: idm.rs  mod.rs
crates/krata/src/idm/: client.rs  internal.rs  mod.rs  protocol.rs  serialize.rs  transport.rs
crates/krata/src/v1/: common.rs  control.rs  mod.rs
crates/kratactl/: Cargo.toml
crates/kratactl/src/: client.rs  console.rs  events.rs  format.rs  lib.rs
crates/kratactl/src/cli/: attach.rs  console.rs  destroy.rs  launch.rs  list.rs  mod.rs  pretty.rs  resolve.rs  watch.rs
crates/kratad/: Cargo.toml  build.rs
crates/kratad/proto/kratad/: db.proto
crates/kratad/src/: control.rs  event.rs  idm.rs  lib.rs  tab.rs
crates/kratad/src/db/: mod.rs  proto.rs
crates/kratad/src/reconcile/: guest.rs  mod.rs
crates/krataguest/: Cargo.toml
crates/krataguest/src/: background.rs  init.rs  lib.rs
crates/kratanet/: Cargo.toml
crates/kratanet/src/: autonet.rs  backend.rs  hbridge.rs  raw_socket.rs  vbridge.rs
crates/kratanet/src/nat/: mod.rs
crates/krataoci/: Cargo.toml
crates/krataoci/examples/: squashify.rs
crates/krataoci/src/: compiler.rs  fetch.rs
crates/kratart/: Cargo.toml
crates/kratart/examples/: channel.rs  squashify.rs
crates/kratart/src/: cfgblk.rs  chan.rs  channel.rs  launch.rs  lib.rs
crates/kratart/src/image/: cache.rs  compiler.rs  fetch.rs  mod.rs  name.rs  registry.rs
crates/kratart/src/launch/: mod.rs
crates/network/: Cargo.toml
crates/network/src/: autonet.rs  backend.rs  chandev.rs  hbridge.rs  lib.rs  raw_socket.rs
crates/network/src/nat/: handler.rs
crates/network/src/proxynat/: tcp.rs
crates/oci/: Cargo.toml
crates/oci/examples/: squashify.rs
crates/oci/src/: assemble.rs  cache.rs  compiler.rs  fetch.rs  lib.rs  name.rs  packer.rs  progress.rs  registry.rs  schema.rs  vfs.rs
crates/oci/src/assemble/: mod.rs
crates/runtime/: Cargo.toml
crates/runtime/examples/: channel.rs
crates/runtime/src/: autoloop.rs  cfgblk.rs  channel.rs  ip.rs  launch.rs  lib.rs  power.rs
crates/zone/: Cargo.toml
crates/zone/src/: background.rs  childwait.rs  exec.rs  init.rs  lib.rs  metrics.rs
daemon/: Cargo.toml
daemon/examples/: dial.rs
daemon/src/: control.rs  event.rs  lib.rs  listen.rs
daemon/src/handlers/: console.rs  destroy.rs  launch.rs  list.rs  mod.rs
daemon/src/runtime/: cfgblk.rs  console.rs  mod.rs
guest/: Cargo.toml
guest/src/: background.rs
hypha/: Cargo.toml
hypha/src/: autoloop.rs  error.rs  lib.rs
hypha/src/agent/: mod.rs
hypha/src/container/: init.rs
hypha/src/ctl/: cfgblk.rs  mod.rs
hypha/src/image/: cache.rs  fetch.rs  mod.rs  name.rs
hypha/src/network/: mod.rs
hypha/src/shared/: mod.rs
libs/advmac/: Cargo.toml  LICENSE
libs/advmac/src/: lib.rs  parser.rs
libs/ipstack/: Cargo.toml
libs/ipstack/src/: error.rs  lib.rs  packet.rs
libs/loopdev/: Cargo.toml  LICENSE
libs/loopdev/src/: bindings.rs  lib.rs
loopdev/: Cargo.toml
loopdev/src/: linux.rs
network/: Cargo.toml
network/examples/: autonet.rs  ping.rs
network/src/: autonet.rs  backend.rs  chandev.rs  forward.rs  hbridge.rs  icmp.rs  lib.rs  nat.rs  pkt.rs  proxynat.rs  raw_socket.rs  vbridge.rs
network/src/nat/: handler.rs  key.rs  processor.rs  table.rs
network/src/proxynat/: icmp.rs  mod.rs  tcp.rs  udp.rs
oci/: Cargo.toml
shared/: Cargo.toml  build.rs
shared/examples/: ethtool.rs
shared/proto/krata/: control.proto
shared/src/: control.rs  ethtool.rs  launchcfg.rs  lib.rs  stream.rs
xen/xenclient/: Cargo.toml
xen/xenclient/examples/: boot.rs
xen/xenclient/src/: boot.rs  elfloader.rs  error.rs  lib.rs  mem.rs  sys.rs  x86.rs
xencall/: Cargo.toml
xencall/examples/: domain_create.rs  domain_info.rs  simple.rs  vcpu_context.rs  version_capabilities.rs
xencall/src/: domctl.rs  lib.rs  memory.rs  sys.rs
xenclient/: Cargo.toml
xenclient/examples/: boot.rs  simple.rs
xenclient/src/: boot.rs  create.rs  elfloader.rs  lib.rs  mem.rs  sys.rs  x86.rs
(+251 files in other folders)
