[workspace]
members = [
    "crates/xen/xencall",
    "crates/xen/xenclient",
    "crates/xen/xenevtchn",
    "crates/xen/xengnt",
    "crates/xen/xenplatform",
    "crates/xen/xenstore",
]
resolver = "2"

[workspace.package]
version = "0.0.23"
homepage = "https://krata.dev"
license = "GPL-2.0-or-later"
repository = "https://github.com/edera-dev/krata"

[workspace.dependencies]
async-trait = "0.1.82"
byteorder = "1"
c2rust-bitfields = "0.18.0"
elf = "0.7.4"
env_logger = "0.11.5"
flate2 = "1.0"
indexmap = "2.5.0"
libc = "0.2"
log = "0.4.22"
memchr = "2"
nix = "0.29.0"
regex = "1.10.6"
slice-copy = "0.3.0"
thiserror = "1.0"
xz2 = "0.1"

[workspace.dependencies.serde]
version = "1.0.209"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.40.0"
features = ["full"]

[workspace.dependencies.uuid]
version = "1.10.0"
features = ["v4"]

[profile.release]
lto = "fat"
strip = "symbols"
