[workspace]
members = [
    "crates/xen/xencall",
    "crates/xen/xenclient",
    "crates/xen/xenevtchn",
    "crates/xen/xengnt",
    "crates/xen/xenplatform",
    "crates/xen/xenstore",
]
resolver = "2"

[workspace.package]
version = "0.0.25"
homepage = "https://krata.dev"
license = "GPL-2.0-or-later"
repository = "https://github.com/edera-dev/krata"

[workspace.dependencies]
async-trait = "0.1.85"
bit-vec = "0.8.0"
byteorder = "1"
elf = "0.7.4"
env_logger = "0.11.6"
flate2 = "1.0"
indexmap = "2.6.0"
libc = "0.2"
log = "0.4.22"
memchr = "2"
nix = "0.29.0"
regex = "1.11.1"
slice-copy = "0.3.0"
thiserror = "2.0.9"
xz2 = "0.1"

[workspace.dependencies.tokio]
version = "1.41.1"
features = ["full"]

[workspace.dependencies.uuid]
version = "1.11.0"
features = ["v4"]

[profile.release]
lto = "fat"
strip = "symbols"
