[package]
name = "kratactr"
version.workspace = true
edition = "2021"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
walkdir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sys-mount = { workspace = true }
oci-spec = { workspace = true }
rtnetlink = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
ipnetwork = { workspace = true }

[dependencies.nix]
workspace = true
features = ["process"]

[dependencies.krata]
path = "../shared"

[lib]
path = "src/lib.rs"

[[bin]]
name = "kratactr"
path = "bin/init.rs"
