[package]
name = "kratactl"
version.workspace = true
edition = "2021"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
termion = { workspace = true }
cli-tables = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dependencies.krata]
path = "../shared"

[lib]
path = "src/lib.rs"

[[bin]]
name = "kratactl"
path = "bin/control.rs"
