[package]
name = "kratactl"
version.workspace = true
edition = "2021"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
clap = { workspace = true }
cli-tables = { workspace = true }
env_logger = { workspace = true }
krata = { path = "../shared" }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
termion = { workspace = true }
tokio = { workspace = true }
tokio-native-tls = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
url = { workspace = true }

[lib]
name = "kratactl"

[[bin]]
name = "kratactl"
path = "bin/control.rs"
