[package]
name = "krataguest"
version.workspace = true
edition = "2021"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
walkdir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sys-mount = { workspace = true }
oci-spec = { workspace = true }
rtnetlink = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
ipnetwork = { workspace = true }
path-absolutize = { workspace = true }
tokio-stream = { workspace = true }

[dependencies.nix]
workspace = true
features = ["process"]

[dependencies.krata]
path = "../shared"

[dependencies.xenstore]
path = "../libs/xen/xenstore"

[lib]
path = "src/lib.rs"

[[bin]]
name = "krataguest"
path = "bin/init.rs"
