[package]
name = "hypha"
version = "0.0.1"
edition = "2021"
resolver = "2"

[dependencies.xenclient]
path = "../xenclient"

[dependencies]
log = "0.4.20"
env_logger = "0.10.1"
flate2 = "1.0.28"
tar = "0.4.40"
directories = "5.0.1"
walkdir = "2"
serde = "1.0.195"
serde_json = "1.0.111"
sha256 = "1.5.0"
url = "2.5.0"
ureq = "2.9.1"

[dependencies.clap]
version = "4.4.18"
features = ["derive"]

[dependencies.oci-spec]
version = "0.6.4"

[dependencies.backhand]
version = "0.14.2"

[dependencies.uuid]
version = "1.6.1"
features = ["v4"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "hyphactl"
path = "bin/controller.rs"

[[bin]]
name = "hyphad"
path = "bin/container.rs"
