[package]
name = "hypha"
version.workspace = true
edition = "2021"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
zstd = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
directories = { workspace = true }
walkdir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha256 = { workspace = true }
url = { workspace = true }
ureq = { workspace = true }
path-clean = { workspace = true }
termion = { workspace = true }
cli-tables = { workspace = true }
clap = { workspace = true }
sys-mount = { workspace = true }
oci-spec = { workspace = true }
backhand = { workspace = true }
uuid = { workspace = true }

[dependencies.nix]
workspace = true
features = ["process"]

[dependencies.loopdev]
path = "../libs/loopdev"

[dependencies.xenclient]
path = "../libs/xen/xenclient"

[dependencies.xenstore]
path = "../libs/xen/xenstore"

[lib]
path = "src/lib.rs"

[[bin]]
name = "hyphactl"
path = "bin/controller.rs"

[[bin]]
name = "hyphactr"
path = "bin/container.rs"
