[package]
name = "kratanet"
version.workspace = true
edition = "2021"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rtnetlink = { workspace = true }
netlink-packet-route = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
udp-stream = { workspace = true }
smoltcp = { workspace = true }
etherparse = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
tokio-tun = { workspace = true }

[dependencies.advmac]
path = "../libs/advmac"

[dependencies.xenstore]
path = "../libs/xen/xenstore"

[lib]
path = "src/lib.rs"

[[bin]]
name = "kratanet"
path = "bin/network.rs"

[[example]]
name = "ping"
path = "examples/ping.rs"

[[example]]
name = "autonet"
path = "examples/autonet.rs"
