[package]
name = "krata"
version.workspace = true
edition = "2021"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dependencies.nix]
workspace = true
features = ["ioctl", "socket"]

[lib]
path = "src/lib.rs"

[[example]]
name = "ethtool"
path = "examples/ethtool.rs"
