[package]
name = "xencall"
version = "0.0.1"
edition = "2021"
resolver = "2"

[lib]
path = "src/lib.rs"

[dependencies.uuid]
version = "1.6.1"
features = ["v4"]

[dependencies.nix]
version = "0.27.1"
features = ["ioctl"]

[[example]]
name = "xencall-domain-info"
path = "examples/domain_info.rs"

[[example]]
name = "xencall-domain-create"
path = "examples/domain_create.rs"

[[example]]
name = "xencall-version-capabilities"
path = "examples/version_capabilities.rs"
