[package]
name = "xencall"
version = "0.0.1"
edition = "2021"
resolver = "2"

[lib]
path = "src/lib.rs"

[dependencies]
libc = "0.2"
log = "0.4.20"

[dependencies.uuid]
version = "1.6.1"
features = ["v4"]

[dependencies.nix]
version = "0.27.1"
features = ["ioctl"]

[dev-dependencies]
env_logger = "0.10.1"

[[example]]
name = "xencall-domain-info"
path = "examples/domain_info.rs"

[[example]]
name = "xencall-domain-create"
path = "examples/domain_create.rs"

[[example]]
name = "xencall-version-capabilities"
path = "examples/version_capabilities.rs"

[[example]]
name = "xencall-vcpu-context"
path = "examples/vcpu_context.rs"
