[package]
name = "xenclient"
version = "0.0.1"
edition = "2021"
resolver = "2"

[dependencies]
libc = "0.2"
elf = "0.7.4"
flate2 = "1.0"
xz2 = "0.1"
memchr = "2"
slice-copy = "0.3.0"

[dependencies.xencall]
path = "../xencall"

[dependencies.xenstore]
path = "../xenstore"

[dependencies.uuid]
version = "1.6.1"
features = ["v4"]

[lib]
path = "src/lib.rs"

[[example]]
name = "xenclient-simple"
path = "examples/simple.rs"

[[example]]
name = "xenclient-boot"
path = "examples/boot.rs"
