[package]
name = "krata-daemon"
description = "Daemon for the krata hypervisor."
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
edition = "2021"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
circular-buffer = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
krata = { path = "../krata", version = "^0.0.5" }
krata-runtime = { path = "../runtime", version = "^0.0.5" }
log = { workspace = true }
prost = { workspace = true }
redb = { workspace = true }
signal-hook = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["tls"] }
uuid = { workspace = true }

[lib]
name = "kratad"

[[bin]]
name = "kratad"
path = "bin/daemon.rs"
