[package]
name = "krata"
version.workspace = true
edition = "2021"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
url = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[lib]
name = "krata"

[[example]]
name = "ethtool"
path = "examples/ethtool.rs"
