[package]
name = "kratactl"
version.workspace = true
edition = "2021"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
clap = { workspace = true }
cli-tables = { workspace = true }
env_logger = { workspace = true }
krata = { path = "../krata" }
log = { workspace = true }
serde = { workspace = true }
termion = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
url = { workspace = true }

[lib]
name = "kratactl"

[[bin]]
name = "kratactl"
path = "bin/control.rs"
