[package]
name = "krataguest"
version.workspace = true
edition = "2021"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
ipnetwork = { workspace = true }
krata = { path = "../krata" }
libc = { workspace = true }
log = { workspace = true }
nix = { workspace = true, features = ["process"] }
oci-spec = { workspace = true }
path-absolutize = { workspace = true }
rtnetlink = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sys-mount = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
xenstore = { path = "../xen/xenstore" }

[lib]
name = "krataguest"

[[bin]]
name = "krataguest"
path = "bin/init.rs"
