[package]
name = "kratanet"
version.workspace = true
edition = "2021"
resolver = "2"

[dependencies]
advmac = { path = "../vendor/advmac" }
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
etherparse = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
rtnetlink = { workspace = true }
smoltcp = { workspace = true }
tokio = { workspace = true }
tokio-tun = { workspace = true }
udp-stream = { workspace = true }
uuid = { workspace = true }
xenstore = { path = "../xen/xenstore" }

[lib]
name = "kratanet"

[[bin]]
name = "kratanet"
path = "bin/network.rs"

[[example]]
name = "ping"
path = "examples/ping.rs"

[[example]]
name = "autonet"
path = "examples/autonet.rs"
