[package]
name = "kratart"
version.workspace = true
edition = "2021"
resolver = "2"

[dependencies]
advmac = { path = "../vendor/advmac" }
anyhow = { workspace = true }
backhand = { workspace = true }
ipnetwork = { workspace = true }
krata = { path = "../krata" }
krataoci = { path = "../krataoci" }
log = { workspace = true }
loopdev = { path = "../vendor/loopdev" }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
xenclient = { path = "../xen/xenclient" }
xenstore = { path = "../xen/xenstore" }

[lib]
name = "kratart"

[dev-dependencies]
env_logger = { workspace = true }

[[example]]
name = "kratart-squashify"
path = "examples/squashify.rs"
