[package]
name = "krata-oci"
description = "OCI services for the krata hypervisor."
license.workspace = true
version= "0.0.1"
homepage.workspace = true
repository.workspace = true
edition = "2021"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
async-compression = { workspace = true, features = ["tokio", "gzip", "zstd"] }
async-trait = { workspace = true }
backhand = { workspace = true }
bytes = { workspace = true }
krata-tokio-tar = { workspace = true }
log = { workspace = true }
oci-spec = { workspace = true }
path-clean = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha256 = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }

[lib]
name = "krataoci"

[dev-dependencies]
env_logger = { workspace = true }

[[example]]
name = "krataoci-squashify"
path = "examples/squashify.rs"
