[package]
name = "krata-runtime"
description = "Runtime for running guests on the krata isolation engine"
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
edition = "2021"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
backhand = { workspace = true }
ipnetwork = { workspace = true }
krata = { path = "../krata", version = "^0.0.11" }
krata-advmac = { workspace = true }
krata-oci = { path = "../oci", version = "^0.0.11" }
log = { workspace = true }
loopdev-3 = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
krata-xenclient = { path = "../xen/xenclient", version = "^0.0.11" }
krata-xenevtchn = { path = "../xen/xenevtchn", version = "^0.0.11" }
krata-xengnt = { path = "../xen/xengnt", version = "^0.0.11" }
krata-xenplatform = { path = "../xen/xenplatform", version = "^0.0.11" }
krata-xenstore = { path = "../xen/xenstore", version = "^0.0.11" }
walkdir = { workspace = true }

[lib]
name = "kratart"

[dev-dependencies]
env_logger = { workspace = true }

[[example]]
name = "kratart-channel"
path = "examples/channel.rs"
