[package]
name = "krata-runtime"
description = "Runtime for managing zones on the krata isolation engine"
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
edition = "2021"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
backhand = { workspace = true }
ipnetwork = { workspace = true }
krata = { path = "../krata", version = "^0.0.21" }
krata-advmac = { workspace = true }
krata-oci = { path = "../oci", version = "^0.0.21" }
log = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
krata-loopdev = { path = "../loopdev", version = "^0.0.21" }
krata-xencall = { path = "../xen/xencall", version = "^0.0.21" }
krata-xenclient = { path = "../xen/xenclient", version = "^0.0.21" }
krata-xenevtchn = { path = "../xen/xenevtchn", version = "^0.0.21" }
krata-xengnt = { path = "../xen/xengnt", version = "^0.0.21" }
krata-xenplatform = { path = "../xen/xenplatform", version = "^0.0.21" }
krata-xenstore = { path = "../xen/xenstore", version = "^0.0.21" }
walkdir = { workspace = true }
indexmap = { workspace = true }

[lib]
name = "kratart"

[dev-dependencies]
env_logger = { workspace = true }

[[example]]
name = "kratart-channel"
path = "examples/channel.rs"
