# This package is from https://github.com/narrowlink/ipstack
# Mycelium maintains an in-tree version because we need to work at the ethernet layer
# rather than the standard tun layer of IP.
[package]
authors = ['Narrowlink <opensource@narrowlink.com>']
description = 'Asynchronous lightweight implementation of TCP/IP stack for Tun device'
name = "ipstack"
version = "0.0.3"
edition = "2021"
license = "Apache-2.0"
repository = 'https://github.com/narrowlink/ipstack'
# homepage = 'https://github.com/narrowlink/ipstack'
readme = "README.md"

[features]
default = []
log = ["tracing/log"]

[dependencies]
tokio = { version = "1.35", features = [
    "sync",
    "rt",
    "time",
    "io-util",
    "macros",
], default-features = false }
etherparse = { version = "0.13", default-features = false }
thiserror = { version = "1.0", default-features = false }
tracing = { version = "0.1", default-features = false, features = [
    "log",
], optional = true }

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
udp-stream = { version = "0.0", default-features = false }
tokio = { version = "1.35", features = [
    "rt-multi-thread",
], default-features = false }

#tun2.rs example
tun2 = { version = "1.0", features = ["async"] }

#tun_wintun.rs example
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dev-dependencies]
tun = { version = "0.6.1", features = ["async"], default-features = false }
[target.'cfg(target_os = "windows")'.dev-dependencies]
wintun = { version = "0.4", default-features = false }
