# This package is from https://github.com/stratis-storage/loopdev-3
# Mycelium maintains an in-tree version because the goals of hypha mean that
# there is as little binding generation as possible, especially bindings which
# prevent development from macOS, like the original library.
[package]
name = "loopdev"
version.workspace = true
license = "MIT"
edition = "2021"

[lib]
name = "loopdev"

[dependencies]
errno = { workspace = true }
libc = { workspace = true }

[dependencies.nix]
workspace = true
features = ["ioctl"]
